--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ backports.zoneinfo==0.2.1
 cloudinary==1.28.0
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
-Django==4.0
+Django==3.2
 django-allauth==0.47.0
 django-cloudinary-storage==0.3.0
 django-crispy-forms==1.13.0
@@ -13,5 +13,7 @@ psycopg2==2.9.2
 psycopg2-binary==2.9.3
 PyJWT==2.3.0
 python3-openid==3.2.0
+pytz==2021.3
 requests-oauthlib==1.3.0
 sqlparse==0.4.2
+whitenoise==5.3.0
